<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <TextView
        android:textColor="@color/yelow"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/chon_d_gioi_tinh_cua_ban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_margin="16dp"
       android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioButton
        android:textSize="25sp"
        android:layout_alignParentLeft="true"
        android:text="@string/male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <RadioButton
            android:textSize="25sp"
            android:layout_alignParentRight="true"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_back"
            android:text="Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_next"
            android:layout_alignParentRight="true"
            android:text="Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>